// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VisualizationType should match a snapshot with type info 1`] = `
<li
  className="active"
  role="presentation"
>
  <a
    href="#"
    onClick={[Function]}
  >
    icon
     
    Icicle
  </a>
</li>
`;

exports[`VisualizationType should match an empty snapshot 1`] = `
<li
  className=""
  role="presentation"
>
  <a
    href="#"
    onClick={[Function]}
  >
     
  </a>
</li>
`;
